# zotero-pdf2zh-next

./: .dockerignore  .gitignore  CLAUDE.md  README.md  compose.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 常见问题.md  问题反馈.md
.github/workflows/: ci.yml  release.yml
plugin/: package.json  zotero-plugin.config.ts
plugin/addon/: prefs.js
plugin/addon/content/: llmApiEditor.xhtml  preferences.xhtml  taskManager.xhtml
plugin/addon/locale/en-US/: addon.ftl  preferences.ftl
plugin/addon/locale/zh-CN/: addon.ftl  preferences.ftl
plugin/src/: hooks.ts
plugin/src/modules/: pdf2zh.ts  pdf2zhHelper.ts  pdf2zhTaskManager.ts  pdf2zhTypes.ts  preferenceScript.ts
plugin/typings/: prefs.d.ts
server/: Dockerfile  pdf2zh_next_service.py  pyproject.toml  server.py  task_manager.py
server/tests/: test_server.py
